params.merge -> params.permit.merge

--- a/app/views/manifestations/_pub_year_facet.html.erb
+++ b/app/views/manifestations/_pub_year_facet.html.erb
@@ -6,6 +6,6 @@
     </li>
   <%- end -%>
   <%- if params[:pub_date_from] and params[:pub_date_until] -%>
-    <li><%= link_to t('page.remove_this_facet'), url_for(params.merge(pub_date_from: nil, pub_date_until: nil, page: nil, view: nil, only_path: true)) -%></li>
+    <li><%= link_to t('page.remove_this_facet'), url_for(params.permit.merge(pub_date_from: nil, pub_date_until: nil, page: nil, view: nil, only_path: true)) -%></li>
   <%- end -%>
 </ul>
