--- a/app/views/manifestations/_library_facet.html.erb
+++ b/app/views/manifestations/_library_facet.html.erb
@@ -6,6 +6,6 @@
     <%= library_facet(current_libraries, facet) %>
   <%- end -%>
   <%- if params[:library] -%>
-    <li><%= link_to t('page.remove_this_facet'), url_for(params.merge(library: nil, page: nil, view: nil, only_path: true)) -%></li>
+    <li><%= link_to t('page.remove_this_facet'), url_for(params.permit.merge(library: nil, page: nil, view: nil, only_path: true)) -%></li>
   <%- end -%>
 </ul>
